# bimos

./: CMakeLists.txt  README.md  package.xml
cfg/: Bimos.cfg
include/bimos/: MosaicBuilder.h
include/bimos/blend/: Blender.h
include/bimos/graph/: Edge.h  Graph.h  Keyframe.h  MosaicGraph.h
include/bimos/imgdesc/: ImageDescriptor.h  ldb.h
include/bimos/kfsel/: KeyframeSelector.h
include/bimos/loopcloser/: LoopCloser.h
include/bimos/motionest/: AffineEstimator2D.h  HomographyEstimator.h  ParameterEstimator.h  Point2D.h  RANSAC.h  SimilarityEstimator2D.h
include/bimos/optim/: MosaicAdjuster.h  Optimizer.h
include/bimos/util/: ConcurrentQueue.hpp  Image.h  MosaicPublisher.h  Params.h  Transform.h  util.h
launch/: bimos.launch  bimos_convfactors.launch  bimos_only.launch  bimos_rot.launch  image_publisher_only.launch
resources/: bimos.perspective
src/: MosaicBuilder.cpp
src/blend/: Blender.cpp
src/graph/: Graph.cpp  MosaicGraph.cpp
src/imgdesc/: ImageDescriptor.cpp  ORBextractor.cc  ldb.cpp
src/kfsel/: KeyframeSelector.cpp
src/loopcloser/: LoopCloser.cpp
src/motionest/: AffineEstimator2D.cpp  HomographyEstimator.cpp  SimilarityEstimator2D.cpp
src/node/: bimos_convfactors.cpp  bimos_node.cpp  bimos_rotational.cpp  image_publisher_node.cpp
src/optim/: MosaicAdjuster.cpp  Optimizer.cpp
src/util/: MosaicPublisher.cpp  Params.cpp  Transform.cpp  util.cpp
